src/test/ui/borrowck/issue-24267-flow-exit.stderr
error[E0381]: borrow of possibly-uninitialized variable: `x`
  --> $DIR/issue-24267-flow-exit.rs:12:20
   |
LL |     println!("{}", x);
   |                    ^ use of possibly-uninitialized `x`
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0381]: borrow of possibly-uninitialized variable: `x`
  --> $DIR/issue-24267-flow-exit.rs:18:20
   |
LL |     println!("{}", x);
   |                    ^ use of possibly-uninitialized `x`
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
